[feat] .ignore 업데이트